--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>My app</title>
-    <meta charset="UTF-8" />
-    <base href="/">
+    <meta charset="utf-8" />
+    <title>Angular Zoneless Apps</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <app-root>Loading...</app-root>
+    <app-root></app-root>
   </body>
 </html>
